// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deque grow case 1 1`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  ,
]
`;

exports[`Deque grow case 1 2`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
]
`;

exports[`Deque grow case 1 3`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  ,
  ,
  ,
  ,
  ,
  ,
  ,
  ,
]
`;

exports[`Deque grow case 1 4`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
]
`;

exports[`Deque grow case 2 1`] = `
Array [
  6,
  7,
  ,
  1,
  2,
  3,
  4,
  5,
]
`;

exports[`Deque grow case 2 2`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
]
`;

exports[`Deque grow case 2 3`] = `
Array [
  undefined,
  undefined,
  ,
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  ,
  ,
  ,
  ,
  ,
]
`;

exports[`Deque grow case 2 4`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
]
`;

exports[`Deque grow case 3 1`] = `
Array [
  3,
  4,
  5,
  6,
  7,
  ,
  1,
  2,
]
`;

exports[`Deque grow case 3 2`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
]
`;

exports[`Deque grow case 3 3`] = `
Array [
  3,
  4,
  5,
  6,
  7,
  8,
  undefined,
  undefined,
  ,
  ,
  ,
  ,
  ,
  ,
  1,
  2,
]
`;

exports[`Deque grow case 3 4`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
]
`;

exports[`Deque pushBackArray 0 1`] = `
Array [
  1,
  2,
  3,
  ,
]
`;

exports[`Deque pushBackArray 0 2`] = `
Array [
  1,
  2,
  3,
]
`;

exports[`Deque pushBackArray 0 3`] = `
Array [
  1,
  2,
  3,
  4,
  ,
  ,
  ,
  ,
]
`;

exports[`Deque pushBackArray 0 4`] = `
Array [
  1,
  2,
  3,
  4,
]
`;

exports[`Deque pushBackArray 1 1`] = `
Array [
  1,
  2,
  3,
  ,
]
`;

exports[`Deque pushBackArray 1 2`] = `
Array [
  1,
  2,
  3,
]
`;

exports[`Deque pushBackArray 1 3`] = `
Array [
  1,
  2,
  3,
  4,
  ,
  ,
  ,
  ,
]
`;

exports[`Deque pushBackArray 1 4`] = `
Array [
  1,
  2,
  3,
  4,
]
`;

exports[`Deque pushBackArray 2 1`] = `
Array [
  1,
  2,
  3,
  4,
  ,
  ,
  ,
  ,
]
`;

exports[`Deque pushBackArray 2 2`] = `
Array [
  1,
  2,
  3,
  4,
]
`;

exports[`Deque pushFrontArray 0 1`] = `
Array [
  ,
  3,
  2,
  1,
]
`;

exports[`Deque pushFrontArray 0 2`] = `
Array [
  3,
  2,
  1,
]
`;

exports[`Deque pushFrontArray 0 3`] = `
Array [
  4,
  3,
  2,
  1,
  ,
  ,
  ,
  ,
]
`;

exports[`Deque pushFrontArray 0 4`] = `
Array [
  4,
  3,
  2,
  1,
]
`;

exports[`Deque pushFrontArray 1 1`] = `
Array [
  ,
  3,
  2,
  1,
]
`;

exports[`Deque pushFrontArray 1 2`] = `
Array [
  3,
  2,
  1,
]
`;

exports[`Deque pushFrontArray 1 3`] = `
Array [
  4,
  3,
  2,
  1,
  ,
  ,
  ,
  ,
]
`;

exports[`Deque pushFrontArray 1 4`] = `
Array [
  4,
  3,
  2,
  1,
]
`;

exports[`Deque pushFrontArray 2 1`] = `
Array [
  ,
  ,
  ,
  ,
  4,
  3,
  2,
  1,
]
`;

exports[`Deque pushFrontArray 2 2`] = `
Array [
  4,
  3,
  2,
  1,
]
`;
